...
        app:layout_constraintTop_toBottomOf="@id/iv_weather"
        tools:text="Last updated \n 8:39 PM" />
</androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/weather_pager"
            android:layout_width="match_parent"
...
